# proyecto_blockchain

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  diagram.puml  main.cpp  mainwindow.cpp  test
data/: transactions.csv  transactions_debug.csv
src/: main.cpp
src/app/: block.cpp  block.h  block.hpp  blockchain.cpp  blockchain.h  flist.hpp  transaction.cpp  transaction.h
src/app/lib/: btree.h  circular_array.hpp  dynamic_array.hpp  dynamic_array_iterator.hpp  flist.hpp  flist_iterator.hpp  forward_list.hpp  hash.hpp  heap.hpp  lazycsv.hpp  list.h  node.h  node.hpp  patriciatrie.hpp  test.cpp  trie.hpp  vector.hpp  vector_iterator.hpp
src/web/: README.md  index.html  package-lock.json  package.json
src/web/public/: index.html
src/web/src/: App.vue  main.js
src/web/src/components/: Home.vue  blocks.vue  searchs.vue  transactions.vue  vistas.vue
src/web/src/router/: index.js
src/web/src/services/: Services.js
src/web/src/views/: HomeView.vue  block.vue  search.vue  transaction.vue  vista.vue
